--- a/src/tools/jdeps/BUILD
+++ b/src/tools/jdeps/BUILD
@@ -1,5 +1,6 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
 load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
+load("@rules_shell//shell:sh_test.bzl", "sh_test")
 
 # Description:
 #   Package for tool to filter a jdeps proto
